Update to align with Fall 2018 critical path

--- a/wk02content.html
+++ b/wk02content.html
@@ -7,7 +7,7 @@
   <H3>Week 2 Hardware</H3>
   <p>
    <ul>
-	<li>Project Proposal Due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week2ProjectProposalRubric.xml">rubric</a>), hand in your hardcopy of a completed/modified table.
+	<li>Project Proposal Due (<a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/Week2ProjectProposalRubric.xml">rubric</a>), hand in your hardcopy of a completed/modified table and post a link to your submission on your blog.
 	 Please also make a decision regarding the following 2 forms and submit with your respective answers: <a href="http://humber.ca/brand/sites/default/files/Photo%20Consent%20Form_rev29Jan2016.pdf">photo consent</a>
 	 (mostly for open house and videos) and <a href="http://www.humber.ca/brand/sites/default/files/Humber%20STUDENT%20WORKS%20Consent%20July2014_FIN.pdf">project consent</a>
 	 (though you cover this one mostly through the licensing you choose for your repository).</li>
