--- a/wk03content.html
+++ b/wk03content.html
@@ -7,7 +7,7 @@
   <H3>Week 3 Hardware</H3>
   <p>
    <ul>
- 	<li>Project Schedule Due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week3RubricforProjectSchedule.xml">rubric</a>).</li>
+ 	<li>Project Schedule Due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week3RubricforProjectSchedule.xml">rubric</a>), post a link to your submission on your blog.</li>
  	<li>Budget Due next week - for an example visit: <a href="https://github.com/six0four/MicroRover/blob/master/PartsFor20MicroRoversRev02.xlsx">a budget for 20 MicroRovers</a>.</li>
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
 	<li>2018-2019 A Projects:
@@ -48,7 +48,7 @@
       <li>Digital Radio: <a href="https://github.com/darrenprong">Darren-TEA5767</a>.</li>
 	 </ol>
 	</li>
-	<li>GitHub accounts and blogs - feel free to use index.md instead of indexcontent.html. Feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
+	<li>GitHub accounts and blogs - please use index.md feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
    </ul>
   </p>
  </SECTION>
