--- a/wk05content.html
+++ b/wk05content.html
@@ -3,22 +3,18 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
  
- 
  <SECTION ID="Section_5">
   <H3>Week 5 Hardware</H3>
-  
-  <H3>Reading Days</H3>
   <p>
-   <ul>Consider whether you have:
- 	<li>Ordered your parts and blogged about it.</li>
-	<li>Sent your Gerber files to Vlad/Kelly.</li>
- 	<li>Blinked an LED on a crib Pi <a href="https://six0four.github.io/StudentSenseHat/cribpi.html">getting started https://six0four.github.io/StudentSenseHat/cribpi.html</a>.</li>
-	<li>Completed <a href="https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html">https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html</a></li>
-	<li>Reviewed: <a href="https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true">https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true</a></li>
-	<li>Completed your PCB soldering.</li> 
+   <ul>
+    <li>Proof of purchase due by posting on your blog (be sure to not post any sensitive information) - see week 1 regarding index.md.</li>
+	<li>N.B. Regardless of project, prototypes are not to be left powered unattended.</li>
+	<li>Raspbian OS and fritzing session.</li>
+	<li>To set up your Broadcom development platform's SD card be sure to visit <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md#student-raspberry-pi-image-creation-and-test-code">image creation</a> plus Paul Moggach's technical notes.</li> 
+	<li>It turns outs that the newest version of Rasbian has realvnc-vnc-server installed by default which conflicts with xrdp. Instead of installing xrdp on your development platform you can install <a href="https://www.realvnc.com/download/viewer/">VNC Viewer</a> on your desktop to connect instead of using Remote Desktop Connection. The boot options still need to be set along with ensuring VNC (and I2C) is enabled via Menu > Preferences > Raspberry Pi Configuration > Interfaces and such an image is in the dropbox as before. Please let me know if you have had success purging realvnc-vnc-server and installing then using xrdp.</li>
+ 	<li>Take a look at <a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/ProgressReports.txt">update guidelines</a>.</li> 
    </ul>
   </p>
  </SECTION>
 	
- 
 </ARTICLE>
