--- a/wk06content.html
+++ b/wk06content.html
@@ -4,17 +4,17 @@
  </HEADER>
 	
  <SECTION ID="Section_6">
-  <H3>Week 6 Hardware</H3>
+  <H3>Week 6 Hardware Study Day - no class</H3>
   <p>
-   <ul>
-    <li>Show your acquisitions.</li>
-	<li>N.B. Regardless of project, prototypes are not to be left powered unattended.</li>
- 	<li>Take a look at <a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/ProgressReports.txt">update guidelines</a>.</li> 
-	<li>To set up your Broadcom development platform's SD card be sure to visit <a href="https://github.com/six0four/StudentSenseHat/blob/master/README.md#student-raspberry-pi-image-creation-and-test-code">image creation</a> plus Paul Moggach's technical notes.</li> 
-	<li>Next week is the mechanical assembly milestone.</li>
+   <ul>Consider whether you have:
+ 	<li>Ordered your parts and blogged about it - if it wasn't a study day then it would have been the milestone of bringing your parts to class.</li>
+	<li>Breadboarded your circuit to test your sensor with the development platform and use fritzing to record your work.</li>
+ 	<li>Blinked an LED on a crib Pi <a href="https://six0four.github.io/StudentSenseHat/cribpi.html">getting started https://six0four.github.io/StudentSenseHat/cribpi.html</a>.</li>
+	<li>Completed <a href="https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html">https://www.lynda.com/Raspberry-Pi-tutorials/Up-Running-Raspberry-Pi/191267-2.html</a></li>
+	<li>Reviewed: <a href="https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true">https://www.lynda.com/Software-Development-tutorials/Use-BJT-switch/502049/655694-4.html?autoplay=true</a></li>
+	<li>Next week: Show your acquisitions.</li> 
    </ul>
   </p>
  </SECTION>
- 
  
 </ARTICLE>
