--- a/wk08content.html
+++ b/wk08content.html
@@ -7,10 +7,9 @@
   <H3>Week 8 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the power-up milestone which will be peer graded (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
-	<li>Next week the placard (one per group) is due, post a link to your group's submission on your blog (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week8AnalyticRubricforPlacard.xml">rubric</a>). A <a href="https://github.com/six0four/StudentSenseHat/tree/master/documentation/DRAFTMulticolourPlaque.pub">template</a> is available.</li>
-	<li>Next week the 30 Second Script is due, this is to help you explain what you have accomplished while demo'ing it for the camera.</li>
-	<li>It turns outs that the newest version of Rasbian has realvnc-vnc-server installed by default which conflicts with xrdp. Instead of installing xrdp on your development platform you can install <a href="https://www.realvnc.com/download/viewer/">VNC Viewer</a> on your desktop to connect instead of using Remote Desktop Connection. The boot options still need to be set along with ensuring VNC (and I2C) is enabled via Menu > Preferences > Raspberry Pi Configuration > Interfaces and such an image is in the dropbox as before. Please let me know if you have had success purging realvnc-vnc-server and installing then using xrdp.
+   	<li>This week is the breadboarded assembly milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
+	<li>Gerber file creation session.</li>
+	<li>Next week is the PCB designed milestone.</li>
    </ul>
   </p>
  </SECTION> 
