--- a/wk09content.html
+++ b/wk09content.html
@@ -7,19 +7,12 @@
   <H3>Week 9 Hardware</H3>
   <p>
    <ul>
-	<li>This week the placard (one per group) is due.</li>
-	<li>This week the individual 30 second script is due.</li>
-	<li>There was an <a href="http://www.openscad.org/downloads.html">OpenSCAD</a> demonstration, a laser cutting explanation using Eagle, as well as a <a href="https://en.wikipedia.org/wiki/Windows_Movie_Maker#2017">MovieMaker</a> demonstration. Alternative: <a href="https://www.blender.org/manual/editors/sequencer/strips/types/effects/speed_control.html?highlight=video%20sequence%20editor">Blender</a>.</li>
-	<li>Next week the 30 second build video is due. It should be a concatenation of:<ul>
-	 <li>a 2 second opening title screen with the project and student name,</li>
-     <li>a few seconds of the parts that arrived,</li>
-     <li>a few seconds of the parts assembly,</li>
-     <li>a few seconds of the power up; and,</li>
-     <li>a few seconds about the functionality you plan to demonstrate at the open house.</li></ul>
-	</li>
+   	<li>This week is the PCB designed milestone for which a graded blog entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
+	<li>An <a href="http://www.openscad.org/downloads.html">OpenSCAD</a> demonstration, a laser cutting explanation using CorelDraw.</li>
     <li>Start off by watching some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
-	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a>
-	<li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad their email address is prototypelab_at_humber.ca.</li>
+	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a></li>
+	<li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad by sending your Gerber files to their email address which is prototypelab_at_humber.ca. You may use our in house fabrication via them or use an alternative such as <a href="https://www.seeedstudio.com/fusion.html">SeeedStudio</a>.</li>
+	<li>Next week is the PCB soldered milestone.</li>
    </ul>
   </p>
  </SECTION> 
