--- a/wk13content.html
+++ b/wk13content.html
@@ -3,20 +3,22 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 
-
  <SECTION ID="Section_13">
   <H3>Week 13 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the milestone for which a graded build log entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Guest Career Advisor visit.</li>
-	<li>Discussion of key project attributes to be ready for next term: mechanical, data, test code (eg. sensor read triggers actuator change).</li>
-	<li>Please choose a date and time for your individual presentation.</li>
-	<li>By the conclusion of this course your project must be suitable for the computer systems project, including mechanical assembly of some type such as an acrylic case and the generic sense hat along with test code.</li>
-	<li>Next week a Progress Report is due.</li>
+	<li>This week the individual presentation is due - link to the slides from your blog, they are to cover the following topics for 1 minute or less each:
+	 <ul>
+      <li>Introduction (Proposal)</li>
+      <li>Budget</li>
+      <li>Schedule</li>
+      <li>Build Video</li>
+      <li>Course knowledge utilized from previous courses</li>
+	 </ul>
+	</li>
+	<li>Individual presentations.</li>
    </ul>
   </p>
  </SECTION>
-
 
 </ARTICLE>
