--- a/wk14content.html
+++ b/wk14content.html
@@ -3,25 +3,27 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 
-
  <SECTION ID="Section_14">
   <H3>Week 14 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the milestone for which a graded build log entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Regarding testing, up until now we have been mostly doing unit testing with each individual sensor and actuator, at this point you should be doing production testing of the integrated hardware.</li>
-	<li>If you have any outstanding questions regarding fasteners please refer to <a href="https://www.boltdepot.com/fastener-information/Printable-Tools/Printable-Fastener-Tools.pdf">BoltDepot.com</a> which has great fastener information, while visit <a href="https://en.wikipedia.org/wiki/Wire_gauge">Wikipedia</a> regarding wire gauge.
-	<li>Next week the individual presentation is due - link to the slides from your blog, they are to cover the following topics for 1 minute or less each:<ul>
-     <li>Introduction (Proposal)</li>
-     <li>Budget</li>
-     <li>Schedule</li>
-     <li>Build Video</li>
-     <li>Course knowledge utilized from previous courses</li></ul></li>
-	<li>Please note the information about the presentations, build instructions, and scripts that has already been posted under future weeks and ask any questions you may have this week since from now on it will be quite busy during class time.</li>
-</li>
+	<li>Individual presentations (cont.).</li>
+	<li>Next week the Build Instructions (README.md) are due. The key points to cover are:
+	 <ol>
+	  <li>Correct README.md usage</li>
+	  <li>Introduction using a system diagram</li>
+	  <li>Bill of Materials/Budget</li>
+	  <li>Time Commitment</li>
+	  <li>Mechanical Assembly</li>
+	  <li>PCB / Soldering</li>
+	  <li>Power Up</li>
+	  <li>Unit Testing</li>
+	  <li>Production Testing</li>
+	  <li>Is the project reproducible by following your instructions?</li>
+	 </ol>
+	</li>
    </ul>
   </p>
  </SECTION>
- 
 
 </ARTICLE>
