--- a/wk15content.html
+++ b/wk15content.html
@@ -3,39 +3,14 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 
- 
  <SECTION ID="Section_15">
   <H3>Week 15 Hardware</H3>
   <p>
    <ul>
-	<li>This week the Presentation is due, link to the slides from your blog as per the week 12 instructions.</li>
-	<li>Individual presentations.</li>
-	<li>Next week the Build Instructions are due. The key points to cover are:<ol>
-	 <li>Correct web template usage</li>
-	 <li>Introduction using a system diagram</li>
-	 <li>Bill of Materials/Budget</li>
-	 <li>Time Commitment</li>
-	 <li>Mechanical Assembly</li>
-	 <li>PCB / Soldering</li>
-	 <li>Power Up</li>
-	 <li>Unit Testing</li>
-	 <li>Production Testing</li>
-	 <li>Is the project reproducible by following your instructions?</li></ol></li>
-   </ul>
-  </p>
- </SECTION>
- 
- <SECTION ID="Section_15">
-  <H3>Week 15 Hardware (A - Monday Dec. 11, B - Friday Dec. 15)</H3>
-  <p>
-   <ul>
-	<li>This week your build instructions are due as per the key points to cover discussed in week 12 and described in my week 13 post.</li>
-	<li>Individual presentations (cont.).</li>
+	<li>This week your build instructions (README.md) are due as per the key points to cover discussed in week 12 and described on the week 14 page.</li>
 	<li>Next week the holiday break begins.</li>
    </ul>
   </p>
  </SECTION>
-
-
-
+ 
 </ARTICLE>
