--- a/wk07content.html
+++ b/wk07content.html
@@ -7,10 +7,61 @@
   <H3>Week 7 Hardware</H3>
   <p>
    <ul>
-	<li>This week is the mechanical assembly milestone for which a graded build log entry is due (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
-	<li>Next week is the power-up milestone.</li>
+    <li>Show your acquisitions.</li>
+	<li>Pseudo code assignment due.</li>
+	<li>Next week is the breadboarded assembly milestone.</li>
    </ul>
   </p>
+  <H3>PSEUDO CODE ASSIGNMENT</H3>
+  <p>This is a cross semester assignment with assigned groups as per your blackboard message:
+   <ul>Computer Engineering Technology example project of a bicycle rental service
+    <li>In third year students build a project. First year students will work with them to create pseudo code relevant to their project.</li>
+	<li>There was a time that one would go to a bicycle rental company's
+shack, provide something of value as a deposit and the person working
+at the shack would provide a bicycle on the understanding that you
+would return it along with payment for the amount of time that you
+used it in exchange for return of your deposit.</li>
+	<li>Times have changed, now you use your smart phone to provide your
+credit card information to the bicycle rental company and then you are
+provided the code to unlock a bicycle and you are charged based on
+when you next lock it up.</li>
+	<li>The Computer Engineering Technology capstone consists of creating
+project similar to this. In this example there is a lock mechanism, a
+set of buttons to enter a code, lights and sound to provide feedback.
+In CENG 317, for this example, student A would build an I2C lock
+mechanism, student B would build a I2C code entry interface, student C
+would build a lights and sound I2C feedback device. In CENG 319,
+students A, B and C would form a group to write the corresponding app.
+In CENG 355, the group would package everything up together as a
+functioning prototype.
+</li>
+	<li>This semester, each CENG 317 student will be paired up with one or two
+TECH 104 students for help with pseudo code. These groups are assigned
+and the pseudo code charting is due October 18th, 2018. You are
+provided each other's email addresses via a blackboard message and you
+need to arrange to meet outside of class time - the prototype lab
+(J233) is a great place to meet. This is a 5% peer graded assignment
+and the third year student should specify what I2C device they have
+chosen and help one first year student write pseudo code to write data
+from the I2C device to a cloud service/write data from a cloud service
+to the I2C device. The third year student should help the second
+student write device specific pseudo code for the app to read data
+from a cloud service/write data to the cloud service from the app.</li>
+	<li>Each student will peer grade their other group members contribution
+with the third year students providing information about the project
+and the first year students writing the respective pseudo code. The
+submissions (due during class the week of October 15, 2018) will be
+individual and be a single sided sheet of letter size pdf including
+their grading of their peers. The resulting grades may be shifted for
+a class average of 4/5 please use the following as a guideline:</li>
+	<li>Proficient 5</li>
+	<li>Competent 4</li>
+	<li>Basic 3</li>
+	<li>Needs Improvement 2</li>
+	<li>NA 1 (e.g. you met the student but code was not written)</li>
+   </ul>
+  </p>
+  
  </SECTION>
  
 </ARTICLE>
