--- a/wk10content.html
+++ b/wk10content.html
@@ -3,14 +3,14 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 
-
  <SECTION ID="Section_10">
   <H3>Week 10 Hardware</H3>
   <p>
    <ul>
-	<li>This week the Build Video (as described in week 8) is due including demonstration of functional hardware.</li>
-	<li>Next week starts with the submission of an Individual Progress report and continues with the Hardware Demonstration in class or at the
-	Fall Open House Saturday November 18 10am – 2pm. This will be peer (and guest) graded to an average of 80%.</li>
+	<li>This week is the soldering milestone for which a graded blog entry is due (<a href=https://github.com/six0four/ceng317/tree/master/rubrics/AnalyticRubricforProgressReports.xml">rubric</a>).</li>
+	<li>Next week is the power-up milestone.</li>
+	<li>Next week a Progress Report is due.</li>
+	<li>Next week starts with the submission of an Individual Progress report and continues with the Hardware Demonstration in class</li>
    </ul>
   </p>
  </SECTION>
