--- a/wk11content.html
+++ b/wk11content.html
@@ -3,15 +3,15 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 
- 
  <SECTION ID="Section_11">
   <H3>Week 11 Hardware</H3>
   <p>
    <ul>
-	<li>Progress Report Due, Hardware Demonstration, peer (and guest) graded to an average of 80% in class or at the optional option house.
+	<li>This week is the power-up milestone which will be peer graded (<a href="https://github.com/six0four/ceng317/tree/master/rubrics/Week7PeerGradingRubricforPCB.xml">rubric</a>).</li>
+	<li>Progress Report Due, Hardware Demonstration - demonstration of functional hardware.</li>
+	<li>Next week the enclosure is due.</li>
    </ul>
   </p>
  </SECTION>
-
 
 </ARTICLE>
