--- a/wk07content.html
+++ b/wk07content.html
@@ -53,15 +53,17 @@ and the first year students writing the respective pseudo code. The
 submissions (due during class the week of October 15, 2018) will be
 individual and be a single sided sheet of letter size pdf including
 their grading of their peers. The resulting grades may be shifted for
-a class average of 4/5 please use the following as a guideline:</li>
-	<li>Proficient 5</li>
-	<li>Competent 4</li>
-	<li>Basic 3</li>
-	<li>Needs Improvement 2</li>
-	<li>NA 1 (e.g. you met the student but code was not written)</li>
+a class average of 4/5 please use the following as a guideline:
+	 <ul>
+	  <li>Proficient 5</li>
+	  <li>Competent 4</li>
+	  <li>Basic 3</li>
+	  <li>Needs Improvement 2</li>
+	  <li>NA 1 (e.g. you met the student but code was not written)</li>
+	 </ul>
+	</li>
    </ul>
   </p>
-  
  </SECTION>
  
 </ARTICLE>
