--- a/wk07content.html
+++ b/wk07content.html
@@ -38,7 +38,7 @@
 		functioning prototype.</li>
 	<li>This semester, each CENG 317 student will be paired up with one or two
 		TECH 104 students for help with pseudo code. These groups are assigned
-		and the pseudo code is due October 18th, 2018. You are
+		and the pseudo code is due October 16th, 2018 via blackboard. You are
 		provided each other's email addresses via a blackboard message and you
 		need to arrange to meet outside of class time - the prototype lab
 		(J233) is a great place to meet. This is a 5% peer graded assignment
@@ -51,7 +51,7 @@
 	<li>Each student will peer grade their other group members contribution
 		with the third year students providing information about the project
 		and the first year students writing the respective pseudo code. The
-		submissions (due during class the week of October 15, 2018) will be
+		submissions will be
 		individual and be a single sided sheet of letter size pdf including
 		their grading of their peers. The resulting grades may be shifted for
 		a class average of 4/5 please use the following as a guideline:
