--- a/wk07content.html
+++ b/wk07content.html
@@ -63,6 +63,26 @@
 	  <li>NA 1 (e.g. you met the student but code was not written)</li>
 	 </ul>
 	</li>
+	<li>First TECH104 Student: Provide the firmware pseudo code and grade the CENG317 student, example:
+	 <ul>setup{
+	  <li>Specify sensor's I2C address</li>
+	  <li>Specify data base credentials</li>
+	</ul>}
+	<ul>loop{
+	  <li>Read the sensor</li>
+	  <li>Insert into data base</li>
+	</ul>}
+	<li>Second TECH104 Student: Provide the pseudo code for android activities to display data from database and grade the CENG317 student, example:
+	 <ul>setup{
+	  <li>Show intro screen</li>
+	  <li>Enter credentials</li>
+	</ul>}
+	<ul>loop{
+	  <li>Query database</li>
+	  <li>Display data</li>
+	</ul>}
+	 <li>3rd year CENG Student: Provide System UML diagram and grade pseudo code of first and second TECH104 students.</li>
+	</li>
    </ul>
   </p>
  </SECTION>
