Update for soldering

--- a/wk07content.html
+++ b/wk07content.html
@@ -9,6 +9,9 @@
    <ul>
     <li>Show your acquisitions.</li>
 	<li>Pseudo code assignment grading due on blackboard this week.</li>
+	<li>Be sure to wear safety glasses and consult an expert (such as Kelly and/or Vlad in J233) regarding safety, you can even start at your local hackerspace (Ideally working towards IPC J-STD-001 Requirements for Soldered Electrical and Electronic Assemblies).</li>
+	<li>Also watch some soldering <a href="https://www.youtube.com/watch?v=BLfXXRfRIzY&list=PLQ32vZrF5U2lFOJTtZDytBWBYVLNp4RYz">videos</a>.</li>
+	<li><a href="http://radiojove.gsfc.nasa.gov/telescope/soldering.htm">NASA Jove Project.</a></li>
 	<li>Next week is the breadboarded assembly milestone.</li>
    </ul>
   </p>
