--- a/wk03content.html
+++ b/wk03content.html
@@ -12,7 +12,7 @@
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
 	<li>2018-2019 A Projects:
 	 <ol>
-	  <li>LED: <a href="https://github.com/Kemar101/LED-Discplay">Kemar</a>, RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
+	  <li>LED: <a href="https://github.com/Kemar101/HT16K33">Kemar</a>, RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
 	  <li>NFC: <a href="https://github.com/thejavorac/NFC_Platform">Marko</a>, Digole: <a href="https://github.com/jacobladan/Digole-LCD-Display">Jacob</a>, Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
 	  <li>Infotainment: <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario-Amp</a>, <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean-MCP9808</a>.</li>
 	  <li><a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan-Power</a>, HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>, Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
