--- a/wk03content.html
+++ b/wk03content.html
@@ -40,12 +40,12 @@
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
 	  <li>FumeSafety: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>, <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
 	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
-	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Nursery">Divya</a>.</li>
+	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/TarunKaur/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Arboretum">Divya</a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
 	  <li>: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
 	  <li>Movietuvi: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav-BNO055</a>, <a href="https://gitlab.com/sgtepsilon/hifbox">Jeremy-FXAS21002</a>.</li>
-      <li>Digital Radio: <a href="https://github.com/darrenprong">Darren-TEA5767</a>.</li>
+      <li>Digital Radio: <a href="https://github.com/DarrenProng/Hardware-Production">Darren-TEA5767</a>.</li>
 	 </ol>
 	</li>
 	<li>GitHub accounts and blogs - please use index.md feel free to review <a href="https://www.lynda.com/Web-Development-tutorials/Up-Running-Markdown/438888-2.html">Learning Markdown on Lynda.com</a>.</li>
