Move from gitlab

--- a/wk03content.html
+++ b/wk03content.html
@@ -44,7 +44,7 @@
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
 	  <li>: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
-	  <li>Movietuvi: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav-BNO055</a>, <a href="https://gitlab.com/sgtepsilon/hifbox">Jeremy-FXAS21002</a>.</li>
+	  <li>Movietuvi: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav-BNO055</a>, <a href="https://github.com/4nmdk/hifboxwearable">Jeremy-FXAS21002</a>.</li>
       <li>Digital Radio: <a href="https://github.com/DarrenProng/Hardware-Production">Darren-TEA5767</a>.</li>
 	 </ol>
 	</li>
