--- a/wk09content.html
+++ b/wk09content.html
@@ -13,6 +13,7 @@
 	<li>If you need pins, the part number is <a href="https://www.digikey.ca/products/en?keywords=S1011EC-40-ND">Digi-Key part number S1011EC-40-ND</a></li>
 	<li>An <a href="http://www.openscad.org/downloads.html">OpenSCAD</a> demonstration, a laser cutting explanation using CorelDraw.</li>
     <li>Get your PCB laser etched in J233 with help from Kelly and/or Vlad by sending your Gerber files to their email address which is prototypelab_at_humber.ca. You may use our in house fabrication via them or use an alternative such as <a href="https://www.seeedstudio.com/fusion.html">SeeedStudio</a>.</li>
+	<li>Vlad says: "please ... come with a paper printout of your(sic) board so it’s easier to match the board with the student.</li>
 	<li>Next week is the PCB soldered milestone.</li>
    </ul>
   </p>
