Updated 4th slide to things you should already have

--- a/wk13content.html
+++ b/wk13content.html
@@ -12,7 +12,7 @@
       <li>Introduction (Proposal)</li>
       <li>Budget</li>
       <li>Schedule</li>
-      <li>Build Video</li>
+      <li>Image of enclosed hardware, screen capture of address, image of reading/writing to sensor/effector.</li>
       <li>Course knowledge utilized from previous courses</li>
 	 </ul>
 	</li>
