--- a/wk03content.html
+++ b/wk03content.html
@@ -12,11 +12,11 @@
     <li>Here is a suggestion when forming your groups for 2017-2018 based on the information I have recieved so far:
 	<li>2018-2019 A Projects:
 	 <ol>
+	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
+	  <li>Infotainment: <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean-MCP9808</a>, <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario-Amp</a>.</li>
 	  <li>LED: <a href="https://github.com/Kemar101/HT16K33">Kemar</a>, RTC: <a href="https://github.com/rulaone/DS3231">Rula</a>.</li>
 	  <li>NFC: <a href="https://github.com/markojavorac/NFC_Platform">Marko</a>, Digole: <a href="https://github.com/jacobladan/Digole-LCD-Display">Jacob</a>, Colour: <a href="https://github.com/denalddemirxhiu/Colorify/">Denald</a>.</li>
-	  <li>Infotainment: <a href="https://github.com/RomarioT/TPA2016-I2C-Controlled-Amplifier">Romario-Amp</a>, <a href="https://github.com/S-Danagher/TemperatureSensor-Project.git/">Sean-MCP9808</a>.</li>
 	  <li><a href="https://github.com/JuanRodriguez19/SensorEffector/">Juan-Power</a>, HTU: <a href="https://github.com/JDinhGit/TempSensor">Johnson</a>, Haptic: <a href="https://github.com/JordanPulido/HapticMotorDrive">Jordan</a>.</li>
-	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
 	  <li>Dashboard<a href="https://github.com/Zhillp/SpeedTracker">Zhill-Speed</a>, <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj-Dash</a>.</li>
 	  <li>Parking: <a href="https://github.com/davista123/ParkingManagementSystem/">David</a>.</li>
 	  <li>AM2315: <a href="https://github.com/cblakley/TempSensor">Colin</a>.</li>	  
@@ -34,15 +34,15 @@
 	</li>
 	<li>2018-2019 B Projects:
 	 <ol>
-	  <li>Telematics: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>, <!-- look into sensor availability --> <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>, <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun</a>.</li>
+	  <li>SmartWear: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
+	  <li>3DTelemetry: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
+	  <li>TerrestrialTelematics: <a href="https://github.com/ngtrangminhduc/OverheatSensor">Duc</a>, <!-- look into sensor availability --> <a href="https://github.com/AldousMendoza/ObstructionSensor">Aldous</a>, <a href="https://github.com/biodunduke/ServoMotorDriver">Abiodun</a>.</li>
 	  <li>FruitRipeness: <a href="https://github.com/SuongLuong/SuongLuong/">Suong</a>, <a href="https://github.com/Kritish007/portablesolarsystem">Divendra</a>, <a href="https://github.com/RutvijDodiya/Temperature-Sensor">Rutvij</a>.</li>
 	  <li>: <a href="https://github.com/Simarjeet-Brar/CENG317">Simarjeet</a>.</li>
 	  <li>: <a href="https://github.com/n01103934/Thermometer">Malin</a>.</li>
 	  <li>FumeSafety: <a href="https://princesshernandez.github.io/VOC_Sensor">Princess</a>, <a href="https://github.com/chenken12/L3GD20H-gyroscope">Kenneth</a>.</li>
-	  <li>: <a href="https://github.com/GursehajHarika/barometricsensor">Gursehaj</a>, <a href="https://github.com/ArmanVelani/3axaccel">Arman</a>, <a href="https://github.com/Shubhamsharma1101/TEMPSENS">Shubham</a>.</li>
 	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/GifZeb/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Arboretum">Divya</a>.</li>
 	  <li>: <a href="https://github.com/kuljeet-Singh/charli0x74">Kuljeet</a>, <a href="https://github.com/sahilsaini0014/ResistiveTouch">Sahil</a>, <a href="https://github.com/gsmann997/Max3010Sensor">Gurpreet</a>.</li>
-	  <li>: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
 	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
 	  <li>Movietuvi: <a href="https://github.com/Anubhavchoudhary009/motion-sensor">Anubhav-BNO055</a>, <a href="https://github.com/4nmdk/hifboxwearable">Jeremy-FXAS21002</a>.</li>
       <li>Digital Radio: <a href="https://github.com/DarrenProng/Hardware-Production">Darren-TEA5767</a>.</li>
