--- a/indexmenu.html
+++ b/indexmenu.html
@@ -35,7 +35,7 @@ href="wk15.html">Week 15 Hardware</a></LI>
                                 <LI><a 
 href="#Section_100">Week 0 Integration</a></LI>
 								<LI><a 
-href="#Section_101">Week 1 Integration project list</a></LI>
+href="https://github.com/six0four/ceng355/wk03.html">Week 3 Integration project list</a></LI>
                                 <LI><a 
 href="#Section_116">Future Integration Weeks</a></LI>
 								<LI><a 
