--- a/indexmenu.html
+++ b/indexmenu.html
@@ -31,13 +31,11 @@ href="wk13.html">Week 13 Hardware</a></LI>
 								<LI><a 
 href="wk14.html">Week 14 Hardware</a></LI>
 								<LI><a 
-href="wk15.html">Week 15 Hardware</a></LI>
+href="wk15.html">Week 0</a></LI>
                                 <LI><a 
-href="#Section_100">Week 0 Integration</a></LI>
-								<LI><a 
-href="https://github.com/six0four/ceng355/wk03.html">Week 3 Integration project list</a></LI>
+href="https://six0four.github.io/ceng355/wk03.html">Week 3 Integration project list</a></LI>
                                 <LI><a 
-href="#Section_116">Future Integration Weeks</a></LI>
+href="#Section_101">2016-2017 Projects</a></LI>
 								<LI><a 
 href="#Section_31">Past Projects</a></LI>
 								
