--- a/newcontent.html
+++ b/newcontent.html
@@ -69,7 +69,7 @@ href="https://six0four.github.io/ceng317/wk12.html">Week 12 Hardware (Nov. 26/8)
 
  <SECTION ID="Section_13">
   <H4><a 
-href="https://six0four.github.io/ceng317/wk13.html">Week 13 Hardware (Dec. 3/5)</a></H4>
+href="https://six0four.github.io/ceng317/wk13.html">Week 13 Hardware (Dec. 3/5) - Prototype Acceptance Presentations</a></H4>
  </SECTION>
  
  <SECTION ID="Section_14">
