--- a/newcontent.html
+++ b/newcontent.html
@@ -83,6 +83,37 @@ href="https://six0four.github.io/ceng317/wk15.html">Grades due (Dec. 18)</a></H4
  </SECTION>
 
  <SECTION ID="Section_101">
+  <H3>2018-2019 Projects:</H3>
+  <p><ol>
+   <li><a href="http://github.com/">Solar</a></li>
+   	  <li>Lumi: <a href="https://github.com/AdrienYKC/YongMeIn">Adrien</a>.</li>
+	  <li>Parking: <a href="https://github.com/davista123/ParkingManagementSystem/">David</a>.</li>
+	  <li>Dashboard<a href="https://github.com/Zhillp/SpeedTracker">Zhill-Speed</a>, <a href="https://github.com/KaranRajKanwar/DigitalDashboard">Karan Raj-Dash</a>.</li>
+	  <li>PlantNursery: <a href="https://github.com/Jasleen-Grewal/Nursery">Jasleen</a>, <a href="https://github.com/GifZeb/Nursery">Tarundeep</a>, <a href="https://github.com/Divya-Aggarwal/Arboretum">Divya</a>.</li>
+	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
+	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
+	  <li>SmartWear: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
+  </ol></p>
+ </SECTION>
+
+ <SECTION ID="Section_101">
+  <H3>2017-2018 Projects:</H3>
+  <p><ol>
+   <li><a href="http://github.com/">MakerKids</a></li>
+   <li><a href="http://github.com/">Tennis</a></li>
+   <li><a href="http://github.com/">SensoPlug</a></li>
+   <li><a href="http://github.com/">PartsCrib</a></li>
+   <li><a href="http://github.com/">Greenhouse</a></li>
+   <li><a href="http://github.com/">Lumi</a></li>
+   <li><a href="http://github.com/">SmartWatch</a></li>
+   <li><a href="http://github.com/">Solar</a></li>
+   <li><a href="http://github.com/">AutomotiveUI</a></li>
+   <li><a href="http://github.com/">Parking</a></li>
+   <li><a href="http://github.com/">Industry 4.0</a></li>
+  </ol></p>
+ </SECTION>
+
+  <SECTION ID="Section_101">
   <H3>2016-2017 Projects:</H3>
   <p><ol>
    <li><a href="https://bigbosstony.github.io/">1AmbientComputing</a></li>
@@ -106,7 +137,7 @@ href="https://six0four.github.io/ceng317/wk15.html">Grades due (Dec. 18)</a></H4
 
  
  <SECTION ID="Section_31">
-  <H3>Past Projects</H3>
+  <H3>Past Projects (see posters of previous projects outside J208 and J210 and in J233A)</H3>
   <p><ul>
     <li><a href="http://munro.humber.ca/~mdrk0011/projects/">http://munro.humber.ca/~mdrk0011/projects/</a></li>
 	<li><a href="https://github.com/JDHumphries/Delta-Laser-App">Delta-Laser-App</a></li>
