--- a/wk06content.html
+++ b/wk06content.html
@@ -3,8 +3,8 @@
   <H2>Building IoT Projects</H2>
  </HEADER>
 	
- <SECTION ID="Section_6">
-  <H3>Week 6 Hardware Study Day - no class</H3>
+ <SECTION ID="Section_ReadingWeek">
+  <H3>Reading Week Hardware Study Day - no class</H3>
   <p>
    <ul>Consider whether you have:
  	<li>Ordered your parts and blogged about it - if it wasn't a study day then it would have been the milestone of bringing your parts to class.</li>
