Riipen links added

--- a/newcontent.html
+++ b/newcontent.html
@@ -83,6 +83,23 @@ href="https://six0four.github.io/ceng317/wk15.html">Grades due (Dec. 18)</a></H4
  </SECTION>
 
  <SECTION ID="Section_101">
+  <H3>2019-2020 Projects:</H3>
+  <p><ol>
+   <li><a href="https://app.riipen.com/projects/6785/details">MakerKids</a></li>
+   <li><a href="https://app.riipen.com/projects/6859/details">Tennis</a></li>
+   <li><a href="https://app.riipen.com/projects/7315/details">SensoPlug</a></li>
+   <li><a href="https://app.riipen.com/projects/7323/details">PartsCrib</a></li>
+   <li><a href="https://app.riipen.com/projects/7324/details">Greenhouse</a></li>
+   <li><a href="https://app.riipen.com/projects/7325/details">Lumi</a></li>
+   <li><a href="https://app.riipen.com/projects/7326/details">SmartWatch</a></li>
+   <li><a href="https://app.riipen.com/projects/7327/details">Solar</a></li>
+   <li><a href="https://app.riipen.com/projects/7328/details">AutomotiveUI</a></li>
+   <li><a href="https://app.riipen.com/projects/7329/details">Parking</a></li>
+   <li><a href="https://app.riipen.com/projects/7330/details">Industry 4.0</a></li>
+  </ol></p>
+ </SECTION>
+
+ <SECTION ID="Section_101">
   <H3>2018-2019 Projects:</H3>
   <p><ol>
    <li><a href="http://github.com/">Solar</a></li>
@@ -93,23 +110,6 @@ href="https://six0four.github.io/ceng317/wk15.html">Grades due (Dec. 18)</a></H4
 	  <li>Campus Navigator/Explorer: <a href="https://github.com/IshanKhuttan/HumberNavigator">Ishan-STM32</a>, <a href="https://github.com/HumberCampusNavigator/North">Bettin-LSM9DS0</a>, <a href="https://github.com/HumberCampusExplorer/CampusExplorer">Anoopjot-TMP36</a>.</li>
 	  <li>Ease: <a href="https://github.com/rfmaynard/Accel-MagnetoMeter">Ryan</a>, 1306: <a href="https://github.com/dchristie75/SSD1306-monochrome-OLED">Delroy</a>, Keyboard: <a href="https://github.com/YamiYukiSenpai/MacroKeyTouchSensor">Jonas</a>.</li>
 	  <li>SmartWear: <a href="https://github.com/JayJadav/smartware">Jay</a>, <a href="https://github.com/anshulsanan/smart_wear">Anshul</a>.</li>
-  </ol></p>
- </SECTION>
-
- <SECTION ID="Section_101">
-  <H3>2017-2018 Projects:</H3>
-  <p><ol>
-   <li><a href="http://github.com/">MakerKids</a></li>
-   <li><a href="http://github.com/">Tennis</a></li>
-   <li><a href="http://github.com/">SensoPlug</a></li>
-   <li><a href="http://github.com/">PartsCrib</a></li>
-   <li><a href="http://github.com/">Greenhouse</a></li>
-   <li><a href="http://github.com/">Lumi</a></li>
-   <li><a href="http://github.com/">SmartWatch</a></li>
-   <li><a href="http://github.com/">Solar</a></li>
-   <li><a href="http://github.com/">AutomotiveUI</a></li>
-   <li><a href="http://github.com/">Parking</a></li>
-   <li><a href="http://github.com/">Industry 4.0</a></li>
   </ol></p>
  </SECTION>
 
