--- a/wk01content.html
+++ b/wk01content.html
@@ -54,47 +54,47 @@
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Interactive device - Partner: MakerKids.</li>
+	   <a href="https://app.riipen.com/projects/6785/details">Interactive device - Partner: MakerKids</a>.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Tennis - Partner: Applied PDA.</li>
+	   <a href="https://app.riipen.com/projects/6859/details">Tennis - Partner: Applied PDA</a>.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   SensoPlug - Partner: SensoDrive.</li>
+	   <a href="https://app.riipen.com/projects/7315/details">SensoPlug - Partner: SensoDrive</a>.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   PartsCrib - Partner: Prototype Lab.</li>
+	   <a href="https://app.riipen.com/projects/7323/details">PartsCrib - Partner: Prototype Lab.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Greenhouse - Mentor: Greenhouse.</li>
+	   <a href="https://app.riipen.com/projects/7324/details">Greenhouse - Mentor: Greenhouse</a>.</li>
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   <a href="https://www.youtube.com/watch?v=-iXq85T3K6w">Lumi</a> - Partner: Media.</li>
+	   <a href="https://www.youtube.com/watch?v=-iXq85T3K6w">Lumi</a> - <a href="https://app.riipen.com/projects/7325/details">Partner: Media</a>.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   SmartWatch - Partner: Media.</li>
+	   <a href="https://app.riipen.com/projects/7326/details">SmartWatch - Partner: Media</a>.</li>
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   L-wing rooftop solar system (PLC knowledge helpful). <a href="http://www.sma-america.com/products/solarinverters.html">Solar</a> - Partner: Humber Sustainable Technology Program<.</li>
+	   L-wing rooftop solar system (PLC knowledge helpful). <a href="http://www.sma-america.com/products/solarinverters.html">Solar</a> - <a href="https://app.riipen.com/projects/7327/details">Partner: Humber Sustainable Technology Program</a>.</li>
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Vehicle dashboard - Mentor: Industrial design.</li>
+	   <a href="https://app.riipen.com/projects/7328/details">Vehicle dashboard - Mentor: Industrial design</a>.</li>
 	  <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
        <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Parking lot - Mentor: Indigo.</li>
+	   <a href="https://app.riipen.com/projects/7329/details">Parking</a>Parking lot - Mentor: Indigo</a>.</li>
       <li class="task-list-item">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
 	   <input type="checkbox" class="task-list-item-checkbox" disabled="">
-	   Industry 4.0 - Partner: Humber BCTI.</li>
+	   <a href="https://app.riipen.com/projects/7330/details">Industry 4.0 - Partner: Humber BCTI</a>.</li>
       <li class="task-list-item">Choose your own to be approved that fits the CENG 317 Hardware Production Technology requirements:<ol>
 	  <li>Each project will have a 3rd party mentor/advisor/industry partner that will meet with the group on campus in person at the beginning, middle and end of each term (fall and winter).</li>
 	  <li>The industry partner should be from a company that has been in operation for at least two years with at least two full time employees.</li>
